--- a/index.html
+++ b/index.html
@@ -11,10 +11,43 @@
     <header>
         <h2 class="logo">Header Logo</h2>
         <ul class="header-links">
-            <li><a href="">Link 1</a></li>
-            <li><a href="">Link 2</a></li>
-            <li><a href="">Link 3</a></li>            
+            <li><a href="">header link one</a></li>
+            <li><a href="">header link two</a></li>
+            <li><a href="">header link three</a></li>            
         </ul>
-    </header>    
+    </header>
+
+    <div class="hero">
+        <div class="hero-left">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+            <button>Sign up</button>
+        </div>        
+        <div class="hero-right">
+            <div class="hero-image">This is an image placeholder</div>
+        </div>
+    </div>
+
+    <div class="information-cards">
+        <h2>Some random information</h2>
+        <div class="cards-container">
+            <div class="card">
+                <div class="infographic"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="infographic"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="infographic"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>
+            <div class="card">
+                <div class="infographic"></div>
+                <p>this is some subtext under an illustration or image</p>
+            </div>        
+        </div>
+    </div>
 </body>
 </html>
