Create CTA and Footer
Created the Call to Action part of the page and the footer, will most likely return to this project/ use it as a template for further projects

--- a/index.html
+++ b/index.html
@@ -49,5 +49,26 @@
             </div>        
         </div>
     </div>
+
+    <div class="testimonial">
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+        <h3>-Leeloo, Bunshine of my Love</h3>
+    </div>
+
+    <div class="call-to-action">
+        <div class="cta-container">
+            <div class="cta-left">
+                <h2>Call to action! It's time!</h2>
+                <p>Sign up for our product by clicking that button right over there</p>
+            </div>
+            <div class="cta-right">
+                <button class="cta-button">Sign up</button>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <div>Copyright © Andrew Martin 2022</div>
+    </footer>
 </body>
 </html>
